# UniEvent

./: CMakeLists.txt  FetchDeps.cmake  README.md
backend-uv/src/: UVFsEvent.h  UVLATracker.h  UVLoop.h  UVPipe.h  UVPoll.h  UVSignal.h  UVStream.h  UVTcp.h  UVTimer.h  UVUdp.h  inc.h
cmake/modules/: Findlibuv.cmake
doc/: build.md
plus/UniEvent/backend-uv/: UV.xs  UV.xsi
plus/UniEvent/backend-uv/src/: UVAsync.h  UVBackend.h  UVCheck.h  UVDelayer.h  UVFsEvent.h  UVFsPoll.h  UVHandle.h  UVIdle.h  UVLoop.h  UVPipe.h  UVPoll.h  UVPrepare.h  UVRequest.h  UVSignal.h  UVStream.h  UVTcp.h  UVTick.h  UVTimer.h  UVTty.h  UVUdp.h  UVWork.h  inc.h  uv.cc
plus/UniEvent/libunievent/: CMakeLists.txt
plus/UniEvent/libunievent/tests/lib/: test.cc
plus/UniEvent/libunievent/tests/tcp/: connect.cc
plus/UniEvent/src/panda/: unievent.h
plus/UniEvent/src/panda/unievent/: AddrInfo.h  Async.cc  Async.h  BackendHandle.h  Barrier.cc  Barrier.h  CPUInfo.cc  CPUInfo.h  CachedResolver.cc  CachedResolver.h  Check.cc  Check.h  Command.cc  Command.h  Condition.cc  Condition.h  Debug.h  DyLib.cc  DyLib.h  Error.cc  Error.h  FSEvent.cc  FSEvent.h  FSPoll.cc  FSPoll.h  FSRequest.cc  FSRequest.h  Fs.cc  Fs.h  FsEvent.cc  FsEvent.h  FsPoll.cc  FsPoll.h  Fwd.h  Handle.cc  Handle.h  Idle.cc  Idle.h  InterfaceInfo.cc  InterfaceInfo.h  (+71 more)
plus/UniEvent/src/xs/: compat.h  unievent.cc  unievent.h
plus/UniEvent/src/xs/unievent/: AddrInfo.h  Check.h  Error.h  Fs.h  FsEvent.h  FsPoll.h  Handle.h  Idle.h  Loop.h  Pipe.h  Poll.h  Prepare.h  Resolver.h  Signal.h  Ssl.h  Stream.h  Tcp.h  Timer.h  Tty.h  Udp.h  XSCallback.cc  XSCallback.h  XSCommandCallback.cc  XSCommandCallback.h  XSHandles.cc  XSHandles.h  XSRequests.cc  XSRequests.h  XSResolver.cc  XSResolver.h  XSResolvers.h  XSTimers.h  (+5 more)
plus/UniEvent/t/: 01-loop.t  02-error-base.t  03-timer.t  04-handle.t  05-prepare.t  06-check.t  07-idle.t  08-misc.t  09-fs_event.t  10-fs_poll.t  11-signal.t  13-SSL-TCP.t  14-Resolver.t  15-UDP.t  16-UDP-simple.t  17-UDP-multicast.t  19-Pipe.t  43-tcp-fork-master.t  43-tcp-fork.t  44-tcp-fork-child.t  Binder.pm  CommonStream.pm  ForkTest.pm  PETest.pm  SSL_conf.pm  UniClientSSL.pm  async.cc  async.t  async_test.cc  backend.t  check.cc  check.t  connect_timeout.cc  cpp_socks.t  cpp_socks_buf.t  cpp_ssl.t  cpp_ssl_socks.t  cpp_tests.t  error.t  fs.cc  (+34 more)
plus/UniEvent/t/cert/: 01-alice.csr  01-alice.key  01-alice.pem  02-bob.csr  02-bob.key  02-bob.pem  ca.key  ca.pem  ca2.key  ca2.pem  keys-gen.txt
plus/UniEvent/t/lib/: BenchTcp.xsi  Binder.pm  CommonStream.pm  MyTest.pm  MyTest.xs  SanityChecker.pm  SocksProxy.pm  SocksTest.pm  test.cc  test.h
plus/UniEvent/t/off/: 999-TTY.tt  cpp_socks.tt  cpp_socks_buf.tt  cpp_ssl_socks.tt  tcp-socks-proxy-noauth.pl  tcp-socks-proxy-resolve.pl  tcp-socks-proxy-ssl.pl  tcp-socks-proxy.pl  testssl.pl
plus/UniEvent/t/pipe/: pipe.t
plus/UniEvent/t/src/: async.cc  connect_timeout.cc  intrusive_chain.cc  main.cc  resolver.cc  socks.cc  tcp.cc  test.h  timer.cc  utils.cc  utils.h
plus/UniEvent/t/streamer/: basic.t  file.cc  file.t  stream.t  stream_file.t
plus/UniEvent/t/tcp/: connect-disconnect-no-cache.t  connect-disconnect.t  connect.cc  connect.t  connect_timeout.cc  connect_timeout.t  double-free.t  fork.t  open.t  pair.t  socketpair.t  socks.cc  socks.t  ssl.cc  ssl.t  tcp.cc  tcp.t
plus/UniEvent/t/udp/: simple.t  udp.t
src/panda/unievent/: Fs.cc  Fs.h  FsEvent.cc  FsEvent.h  FsPoll.cc  Loop.cc  Loop.h  Pipe.cc  Pipe.h  Poll.cc  Poll.h  Resolver.cc  Signal.cc  Signal.h  SockAddrHelper.h  Stream.h  Streamer.h  Tcp.cc  Tcp.h  Timer.cc  Timer.h  Udp.cc  Udp.h  Work.cc  Work.h  error.h  util.cc  util.h
src/panda/unievent/backend/: LoopImpl.h  PipeImpl.h  PollImpl.h  StreamImpl.h  TcpImpl.h  TimerImpl.h  UdpImpl.h
src/panda/unievent/streamer/: File.cc  File.h  Stream.h
src/panda/unievent/test/: AsyncTest.cc  AsyncTest.h
tests/: async_test.cc  check.cc  fs.cc  idle.cc  loop.cc  prepare.cc  regression.cc  resolver.cc  timer.cc  util.cc  work.cc
tests/lib/: test.h
tests/stream/: write.cc
tests/streamer/: basic.cc  file.cc  stream.cc
tests/tcp/: base.cc  connect.cc  ssl.cc  tcp.cc  write.cc
(+66 files in other folders)
